# manipulation

./: .coverage  .fossa.yml  .gitignore  .travis  .upstream.repos  LICENSE  README.md
go_to_location/: CMakeLists.txt  package.xml
go_to_location/include/go_to_location/: go_to_location.h
go_to_location/src/: go_to_location_client.cpp  go_to_location_loader.cpp  go_to_location_server.cpp  goto_node.cpp
go_to_location/src/go_to_location/: go_to_location.cpp
inbound_pick/: CMakeLists.txt  package.xml
inbound_pick/config/: config.yaml
inbound_pick/include/inbound_pick/: inbound_client.h  inbound_client.h.bck  inbound_pick.h  inbound_pick.h.bck  pick_objects.h
inbound_pick/launch/: test.launch
inbound_pick/src/: inbound_pick_client.cpp  inbound_pick_loader.cpp  inbound_pick_node.cpp  inbound_pick_server.cpp
inbound_pick/src/inbound_pick/: inbound_client.cpp  inbound_client.cpp.bck  inbound_pick.cpp  pick_objects.cpp  pick_objects_bck.cpp
manipulation_msgs/: CMakeLists.txt  package.xml
manipulation_msgs/action/: GoTo.action  GoTo.action.bck  OrderList.action  PickExecute.action  PickObjects.action  PickPlan.action  PlaceObjects.action  PlaceObjects.action.bck  TeachPickingPose.action
manipulation_msgs/msg/: Box.msg  Grasp.msg  Location.msg  Object.msg  PickBox.msg.bck  Slot.msg
manipulation_msgs/srv/: AddBox.srv.bck  AddBoxes.srv  AddLocations.srv  AddObjects.srv  AddRemoveObjects.srv.bck  AddSlots.srv  ListOfObjects.srv  RemoveLocations.srv  RemoveObjectFromSlot.srv  RemoveObjects.srv  RemoveObjectsFromSlot.srv  RemoveSlots.srv  ResetBoxes.srv  SkillExecute.srv
manipulation_utils/: CMakeLists.txt  README.md  package.xml
manipulation_utils/include/manipulation_utils/: go_to_location.h  inbound_pick_utils.h  location.h  location_bck.h  location_manager.h  manipulation_load_params_utils.h  manipulation_utils.h  moveit_base.h  pick_object.h  pick_objects.h  place_object.h  place_objects.h  skill_base.h
manipulation_utils/src/: skill_base.cpp  test_recipe.cpp
manipulation_utils/src/manipulation_utils/: go_to_location.cpp  inbound_pick_utils.cpp  location.cpp  location_bck.cpp  location_manager.cpp  manipulation_load_params_utils.cpp  manipulation_utils.cpp  pick_objects.cpp  place_objects.cpp  skill_base.cpp
manipulation_utils/test/: test.cpp  test.launch
matlab_msg_gen_ros1/glnxa64/devel/: .catkin  local_setup.sh  setup.sh
matlab_msg_gen_ros1/glnxa64/install/: setup.sh
matlab_msg_gen_ros1/glnxa64/src/manipulation_msgs/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
matlab_msg_gen_ros1/glnxa64/src/manipulation_msgs/m/+ros/+internal/+ros/+custommessages/+manipulation_msgs/: addBoxRequest.m  addLocationsResponse.m  addObjectsRequest.m  listOfObjectsRequest.m  listOfObjectsResponse.m  location.m  object.m
matlab_msg_gen_ros1/glnxa64/src/manipulation_msgs/m/+ros/+msggen/+manipulation_msgs/: AddLocationsRequest.m  Grasp.m  ListOfObjectsRequest.m  Location.m  PickBox.m  RemoveLocationsRequest.m  RemoveLocationsResponse.m
matlab_msg_gen_ros1/glnxa64/src/manipulation_msgs/msg/: PickBox.msg
matlab_msg_gen_ros1/glnxa64/src/manipulation_msgs/src/: manipulation_msgs_AddBoxRequest_common.cpp  manipulation_msgs_AddBoxResponse_common.cpp  manipulation_msgs_AddBox_request_common.cpp  manipulation_msgs_AddBox_response_common.cpp  manipulation_msgs_AddLocationsRequest_common.cpp  manipulation_msgs_AddLocationsResponse_common.cpp  manipulation_msgs_AddLocations_request_common.cpp  manipulation_msgs_AddLocations_response_common.cpp  manipulation_msgs_AddObjectsRequest_common.cpp  manipulation_msgs_AddObjectsResponse_common.cpp  manipulation_msgs_AddObjects_request_common.cpp  manipulation_msgs_AddObjects_response_common.cpp  manipulation_msgs_AddRemoveObjectsRequest_common.cpp  manipulation_msgs_AddRemoveObjectsResponse_common.cpp  manipulation_msgs_AddRemoveObjects_request_common.cpp  manipulation_msgs_AddRemoveObjects_response_common.cpp  manipulation_msgs_Grasp_common.cpp  manipulation_msgs_ListOfObjectsRequest_common.cpp  manipulation_msgs_ListOfObjectsResponse_common.cpp  manipulation_msgs_ListOfObjects_request_common.cpp  manipulation_msgs_ListOfObjects_response_common.cpp  manipulation_msgs_Location_common.cpp  manipulation_msgs_Object_common.cpp  manipulation_msgs_PickBox_common.cpp  manipulation_msgs_RemoveLocationsRequest_common.cpp  manipulation_msgs_RemoveLocationsResponse_common.cpp  manipulation_msgs_RemoveLocations_request_common.cpp  manipulation_msgs_RemoveLocations_response_common.cpp  manipulation_msgs_msg_AddBoxRequest_publisher.cpp  manipulation_msgs_msg_AddBoxRequest_subscriber.cpp  manipulation_msgs_msg_AddBoxResponse_publisher.cpp  manipulation_msgs_msg_AddBoxResponse_subscriber.cpp  manipulation_msgs_msg_AddLocationsRequest_publisher.cpp  manipulation_msgs_msg_AddLocationsRequest_subscriber.cpp  manipulation_msgs_msg_AddLocationsResponse_publisher.cpp  manipulation_msgs_msg_AddLocationsResponse_subscriber.cpp  manipulation_msgs_msg_AddObjectsRequest_publisher.cpp  manipulation_msgs_msg_AddObjectsRequest_subscriber.cpp  manipulation_msgs_msg_AddObjectsResponse_publisher.cpp  manipulation_msgs_msg_AddObjectsResponse_subscriber.cpp  (+32 more)
matlab_msg_gen_ros1/glnxa64/src/manipulation_msgs/srv/: AddBox.srv  AddObjects.srv  ListOfObjects.srv  RemoveLocations.srv
matlab_msg_gen_ros1/glnxa64/src/pickplace_msgs/: CMakeLists.txt  (+2 more)
outbound_place/: CMakeLists.txt  package.xml
outbound_place/include/outbound_place/: outbound_mosaic.h  outbound_mosaic.h.bck  outbound_pallet.h  outbound_pallet.h.bck  outbound_place.h
outbound_place/src/: mosaic.cpp  node.cpp  outbound_place_client.cpp  outbound_place_client_node.cpp  outbound_place_loader.cpp  outbound_place_loader_node.cpp  outbound_place_server.cpp  outbound_place_server_node.cpp  pallet.cpp
outbound_place/src/outbound_place/: outbound_mosaic.cpp  outbound_mosaic.cpp.autosave  outbound_mosaic_BCK.cpp  outbound_mosaic_bck.cpp  outbound_pallet.cpp  outbound_place.cpp
simulate_inbound_camera/: CMakeLists.txt  package.xml
simulate_inbound_camera/src/: simulate_inbound_camera_node.cpp
(+129 files in other folders)
