<?xml version="1.0"?>
<package format="2">
  <name>inbound_pick</name>
  <version>0.0.0</version>
  <description>The inbound_pick package</description>
  <maintainer email="manuel.beschi@stiima.cnr.it">Manuel Beschi</maintainer>
 <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_planning_helper</build_depend>
  <build_depend>manipulation_msgs</build_depend>
  <build_depend>manipulation_utils</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosdyn_core</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_export_depend>moveit_planning_helper</build_export_depend>
  <build_export_depend>manipulation_msgs</build_export_depend>
  <build_export_depend>manipulation_utils</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rosdyn_core</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>moveit_planning_helper</exec_depend>
  <exec_depend>manipulation_msgs</exec_depend>
  <exec_depend>manipulation_utils</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosdyn_core</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <depend>rosparam_utilities</depend>
  <depend>object_loader_msgs</depend>
  <depend>tf_conversions</depend>

  <export>
  </export>
</package>
