<?xml version="1.0"?>
<package format="2">
  <name>manipulation_msgs</name>
  <version>0.0.0</version>
  <description>The manipulation_msgs package</description>

  <maintainer email="manuel.beschi@stiima.cnr.it">Manuel Beschi</maintainer>

  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/manipulation_msgs</url> -->
   <author email="manuel.beschi@stiima.cnr.it">Manuel Beschi</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>


  <export>
  </export>
</package>
